syntax = "proto3";

package api.voiceagent;

option go_package = "store/api/voiceagent;voiceagent";

// Memory (长期记忆): 从对话中提取的用户重要信息。
// 用于让 AI 记住用户的偏好、经历、事实等。
message Memory {
  // _id: 记忆唯一标识。
  string _id = 1 [json_name = "_id"];

  // userId: 所属用户 ID。
  string userId = 2;

  // type: 记忆类型 (fact: 事实, preference: 偏好, experience: 经历, relationship: 人际关系)。
  string type = 3;

  // content: 记忆内容。
  string content = 4;

  // source: 来源会话 ID (可选，自动提取时填充)。
  string source = 5;

  // importance: 重要程度 (1-10)。
  int32 importance = 6;

  // tags: 标签列表，便于检索。
  repeated string tags = 7;

  int64 createdAt = 8;
  int64 updatedAt = 9;
}
